Bug 1016617 - Prevent a subresources' hit count from overflowing over its parent. r=hurley